--- a/module_07/02_ethos_establishing credibility.html
+++ b/module_07/02_ethos_establishing credibility.html
@@ -31,7 +31,7 @@
 
   <div class="container-fluid">
 
-  <header>
+  <header id="thin-1">
     <div class="row">
       <div class="col-sm-12 prime-bg header z-depth-1-half">
         <div class="headerMod accent-4"></div>
@@ -186,13 +186,7 @@
               <div class="card-block">
                 <p>Your reader will be more likely to accept your overall message if you can demonstrate that you are a trustworthy source of information. Readers might question the legitimacy of your entire argument if the information you present is not accurate, current, and relevant.</p>
                 <p>The best way to present yourself as a reliable source of information is to use credible sources. We’ll explore credibility of sources in greater detail during Weeks 9 and 10, but for now here are the key factors to consider when determining whether your source is reliable and credible. Learn more by clicking each title.</p>
-                <div class="col col-sm-7" style="margin: auto;">
-					<!-- Activity gets inserted here -->
-
-					<iframe src="interactives/Credible_sources_activity/Credible_sources_activity.html" width="485" height="295" scrolling="no" frameborder="0"></iframe>
-
-					<!-- End activity -->
-				  </div>
+                <h2>INSERT INTERACTIVE DIAGRAM</h2>
               </div>
             </div>
           </div>
