week 7 05 interactive diagram

--- a/module_07/05_tone_and_credibility_alt.html
+++ b/module_07/05_tone_and_credibility_alt.html
@@ -18,7 +18,6 @@
   <link rel="stylesheet" href="../facilitator_tools/Type2Reveal/css/type2reveal.css">  
   <link rel="stylesheet" href="../facilitator_tools/WritingActivity/thirdpartylib/Trumbowyg-master/dist/ui/trumbowyg.css">
   <link rel="stylesheet" href="../facilitator_tools/WritingActivity/css/texteditsave.css">
-  <link rel="stylesheet" href="../facilitator_tools/DiagramNext/css/diagramnext.css">
 </head>
 <body>
   <div class="container-fluid">
@@ -42,19 +41,109 @@
 		  </div></div>
         <p>When we communicate with others through writing, we must rely entirely on our words to achieve our purpose. Without the use of body language or facial expressions to emphasize and reinforce our ideas, the tone of our writing becomes an extremely valuable tool – especially when our purpose is to persuade our reader. The writer’s tone reflects their attitude both to the topic and to the reader.</p>
         <p>When you are writing persuasively, you want to present yourself to the reader as a credible source of ideas. The more your writing sounds like everyday speech — or communication that you might have with people that you’re already familiar with — the less your reader is going to view you as an authority whose argument they should hold in high esteem.</p>
-        <p>Some elements on informal language that you should avoid include:<ul>
-        		<li>Colloquialism</li>
-        		<li>Slang</li>
-        		<li>Idiom</li>
-        		<li>Cliché</li>
-        		<li>Contractions</li>
-        	</ul>
-        </p>
-        <p><em>Find out more about each including examples by clicking on each section below or use this <a href="05_tone_and_credibility_alt.html">printable version</a>.</em></p>
+        <p>Some elements on informal language that you should avoid include:</p>
         <div class="clearfix"></div>
-        <div class="col-sm-12 top-md mt-3" style="min-height: 600px;">
-          <div id="dnext"></div>
+        <h3>Colloquialism</h3>
+        <p>Colloquial words and phrases often appear in speech even though they are generally vague and tend to contribute little to the actual substance of an idea.</p>
+        <div class="row">
+        	<div class="col-sm-6">
+        		<ul>
+        			<li>Well</li>
+        			<li>ain’t / gonna</li>
+        			<li>really, really </li>
+        			<li>like</li>
+        			<li>totally</li>
+        		</ul>
+        	</div>
+        	<div class="col-sm-6">
+        		<ul>
+        			<li>okay</li>
+        			<li>a lot</li>
+        			<li>no way</li>
+        			<li>way more</li>
+        			<li>cause (in place of because)</li>
+        		</ul>
+        	</div>
         </div>
+        <h3>Slang</h3>
+        <p>Slang refers to words and phrases used most often within particular social or age groups. Slang, like colloquialism, is informal and associated primarily with spoken language.</p>
+        <div class="row">
+        	<div class="col-sm-6">
+        		<ul>
+        			<li>what’s up</li>
+        			<li>hang out</li>
+        			<li>chill</li>
+        		</ul>
+        	</div>
+        	<div class="col-sm-6">
+        		<ul>
+        			<li>cool</li>
+        			<li>awesome</li>
+        		</ul>
+        	</div>
+        </div>
+        <h3>Idiom</h3>
+        <p>Idioms make sense only to the people who are familiar with the meaning; the words themselves don’t have a clear connection to the meaning or use of the term.</p>
+        <div class="row">
+        	<div class="col-sm-6">
+        		<ul>
+        			<li>at the drop of a hat</li>
+        			<li>over the moon</li>
+        			<li>see the light</li>
+        		</ul>
+        	</div>
+        	<div class="col-sm-6">
+        		<ul>
+        			<li>barking up the wrong tree</li>
+        			<li>piece of cake </li>
+        		</ul>
+        	</div>
+        </div>
+        <h3>Clichés</h3>
+        <p>Clichés originally inspired a striking image or an original comparison, but they have become so overused that they no longer produce their intended effect.</p>
+        <div class="row">
+        	<div class="col-sm-6">
+        		<ul>
+        			<li>don’t judge a book by its cover</li>
+        			<li>kill two birds with one stone</li>
+        			<li>actions speak louder than words</li>
+        		</ul>
+        	</div>
+        	<div class="col-sm-6">
+        		<ul>
+        			<li>best of both worlds</li>
+        			<li>par for the course</li>
+        			<li>at the crack of dawn</li>
+        		</ul>
+        	</div>
+        </div>
+        <h3>Contractions</h3>
+        <p>Contractions are formed when other words are shortened and/or condensed:</p>
+        <div class="row">
+        	<div class="col-sm-4">
+        		<ul>
+        			<li>I + will = I’ll</li>
+        			<li>I + am = I’m</li>
+        		</ul>
+        	</div>
+        	<div class="col-sm-4">
+        		<ul>
+        			<li>He + is = He’s</li>
+        			<li>She + is = She’s </li>
+        		</ul>
+        	</div>
+        	<div class="col-sm-4">
+        		<ul>
+        			<li>Cannot = can’t</li>
+        			<li>Will + not  = won’t</li>
+        		</ul>
+        	</div>
+        </div>
+        <p>Style guides and writing experts traditionally frowned upon the use of contractions in writing because they are inherently informal: they are intended to replicate the sound of speech. Using contractions is not as clear as other types of informal language. In this case, be guided by your reader.</p>
+        <ul>
+        	<li>If you’re writing for an unfamiliar or adversarial audience, or if they are superior to you in a workplace hierarchy, using contractions might cause your reader to take your ideas less seriously because you have not presented yourself professionally.</li>
+        	<li>If you want to create a feeling of familiarity between your reader and yourself, the use of contractions might actually help to establish trust with your reader because you have made them feel at ease.</li>
+        </ul>
         <p>This paragraph is an example of writing that is too informal.</p>
         <div class="card second-bg text-white z-depth-1-half p-3 m-2">
         	<p>I’m on transit all the time, which means I’m making all kinds of contributions to society, like traffic and the environment just to name a few. So, it’s high time my government said thank you for all the great things I do just by riding the bus rather than taking my car. But, instead they totally did the opposite with this budget. Are you kidding me?! By taking away the tax credit that saved me serious coin on my tax refund, what they’re showing me is that they don’t really mean what they say about helping students and things like that.</p>
@@ -103,10 +192,7 @@
 <script src="../facilitator_tools/WritingActivity/thirdpartylib/valence/global-superagent-d2l-session-auth.min.js"></script> 
 <script src="../facilitator_tools/WritingActivity/thirdpartylib/valence/csval-lib.js"></script> 
 <script src="../facilitator_tools/WritingActivity/js/texteditsave-multi.js"></script>
-<script>
-		var datafilename2 = "diagramnext_tone_credibility.json";
-	</script> 
-<script src="../facilitator_tools/DiagramNext/js/diagramnext_alt.js"></script>
+
 <noscript>
   This activity will only load in an online environment with JavaScript enabled.
 </noscript>
