--- a/module_07/05_tone_and_credibility_alt.html
+++ b/module_07/05_tone_and_credibility_alt.html
@@ -5,19 +5,25 @@
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
   <meta content="ie=edge" http-equiv="x-ua-compatible">
   <title>Tone and Credibility</title><!-- Font Awesome -->
-  <link href="../font/fontawesome/css/fontawesome-pro-brands.css" rel="stylesheet">
-  <link href="../font/fontawesome/css/fontawesome-pro-light.css" rel="stylesheet">
-  <link href="../font/fontawesome/css/fontawesome-pro-regular.css" rel="stylesheet">
-  <link href="../font/fontawesome/css/fontawesome-pro-core.css" rel="stylesheet">
-  <link href="../font/fontawesome/css/fontawesome-pro-solid.css" rel="stylesheet"><!-- Bootstrap core CSS -->
-  <link href="../css/bootstrap.css" rel="stylesheet"><!-- Material Design Bootstrap -->
-  <link href="../css/mdb.min.css" rel="stylesheet"><!-- Your custom styles (optional) -->
-  <link href="../css/style.css" rel="stylesheet">
-  <link href="../facilitator_tools/Quiz/css/quiz.css" rel="stylesheet">
-  <link rel="stylesheet" href="../facilitator_tools/Type2Reveal/css/jquery.highlighttextarea.css">  
-  <link rel="stylesheet" href="../facilitator_tools/Type2Reveal/css/type2reveal.css">  
-  <link rel="stylesheet" href="../facilitator_tools/WritingActivity/thirdpartylib/Trumbowyg-master/dist/ui/trumbowyg.css">
-  <link rel="stylesheet" href="../facilitator_tools/WritingActivity/css/texteditsave.css">
+<!-- Font Awesome -->
+<link rel="stylesheet" href="../font/fontawesome/css/fontawesome-pro-brands.css">
+<link rel="stylesheet" href="../font/fontawesome/css/fontawesome-pro-light.css">
+<link rel="stylesheet" href="../font/fontawesome/css/fontawesome-pro-regular.css">
+<link rel="stylesheet" href="../font/fontawesome/css/fontawesome-pro-core.css">
+<link rel="stylesheet" href="../font/fontawesome/css/fontawesome-pro-solid.css">
+
+<!-- Bootstrap core CSS -->
+<link href="../css/bootstrap.css" rel="stylesheet">
+
+<!-- Material Design Bootstrap -->
+<link href="../css/mdb.min.css" rel="stylesheet">
+
+<!-- Your custom styles (optional) -->
+<link href="../css/style.css" rel="stylesheet">
+<link rel="stylesheet" href="../facilitator_tools/WritingActivity/thirdpartylib/Trumbowyg-master/dist/ui/trumbowyg.css">
+<link rel="stylesheet" href="../facilitator_tools/WritingActivity/css/texteditsave.css">
+<link rel="stylesheet" href="../facilitator_tools/Type2Reveal/css/jquery.highlighttextarea.css">  
+<link rel="stylesheet" href="../facilitator_tools/Type2Reveal/css/type2reveal.css">
 </head>
 <body>
   <div class="container-fluid">
@@ -176,15 +182,7 @@
   </script> <!-- OLC Custom JS -->
   <script src="../js/plugins/olc-custom.js">
   </script>
-  <!-- Type2Reveal JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-
-<script>
-	var datafilename = "type2reveal_tone_credibility.json";
-</script>
-<script src="../facilitator_tools/Type2Reveal/js/jquery.highlighttextarea.js"></script>
-<script src="../facilitator_tools/Type2Reveal/js/type2reveal.js"></script>
-<!-- Text-Edit-Save JS -->
+  <!-- Text-Edit-Save JS -->
 <script src="../facilitator_tools/WritingActivity/thirdpartylib/Trumbowyg-master/dist/trumbowyg.js"></script>
 <script>
 	var jsonfilename = "texteditsave_tone_credibility.json";
@@ -192,6 +190,14 @@
 <script src="../facilitator_tools/WritingActivity/thirdpartylib/valence/global-superagent-d2l-session-auth.min.js"></script> 
 <script src="../facilitator_tools/WritingActivity/thirdpartylib/valence/csval-lib.js"></script> 
 <script src="../facilitator_tools/WritingActivity/js/texteditsave-multi.js"></script>
+<!-- Type2Reveal JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+
+<script>
+	var datafilename = "type2reveal_tone_credibility.json";
+</script>
+<script src="../facilitator_tools/Type2Reveal/js/jquery.highlighttextarea.js"></script>
+<script src="../facilitator_tools/Type2Reveal/js/type2reveal.js"></script>
 
 <noscript>
   This activity will only load in an online environment with JavaScript enabled.
