--- a/module_07/19_analysis_of_persuasive_text.html
+++ b/module_07/19_analysis_of_persuasive_text.html
@@ -30,6 +30,7 @@
     <div class="container">
       <div class="col-sm-12 content">
         <h1>Analysis of Persuasive Text</h1>
+        <img src="images/trades_heading.jpg" class="img-fluid rounded z-depth-1 mb-3">
         <p>Now that you’ve seen how a piece of persuasive writing can be analyzed according to its key features, try to do it on your own. Read the following text and follow the prompts to identify the features and techniques of argumentation that we’ve been learning about in this module.</p>
         <p>Answer the following questions: <ul>
         	<li>Which of three persuasive strategies — credibility (ethos), logic (logos), or emotion (pathos) — does the author seem to emphasize?</li>
@@ -38,7 +39,7 @@
         	<li>Which kinds of logical evidence draw on support his or her argument? </li>
         	<li>What emotional techniques does the author use, i.e., narration, description, or evocative language?</li>
         </ul></p>
-        <p><a href="http://ra.ocls.ca/ra/login.aspx?inst=conestoga&url=http://go.galegroup.com/ps/i.do?p=PPHI&sw=w&u=conestoga&v=2.1&id=GALE%7CA470462957&it=r&asid=449b2beb9de6b4ef4fa72fac1f9ad9a4" target="_blank">Metal’s ‘graduation’</a></p>
+        <p><a href="http://ra.ocls.ca/ra/login.aspx?inst=conestoga&url=http://go.galegroup.com/ps/i.do?p=PPHI&sw=w&u=conestoga&v=2.1&id=GALE%7CA470462957&it=r&asid=449b2beb9de6b4ef4fa72fac1f9ad9a4" target="_blank">Metal’s ‘graduation’ <i class="far fa fa-external-link" aria-hidden="true"></i></a></p>
         <div class="citation mt-5">
 				<p><strong>References:</strong><br>
 				Rick Damato, <em>Roofing Contractor</em>, October 2016</p>
