--- a/module_07/10_using_pathos_effectively.html
+++ b/module_07/10_using_pathos_effectively.html
@@ -55,9 +55,9 @@
                 <p>Read the following passage to observe what you can achieve when you intentionally vary the length of sentences:</p>
                 <!--Card Primary-->
 				<div class="z-depth-1 p-3 mb-3">
-						<p class="text-third">This sentence has five words. Here are five more words. Five-word sentences are fine. But several together become monotonous. Listen to what is happening. The writing is getting boring. The sound of drones. It’s like a stuck record. The ear demands some variety. </p>
-						<p><font style="color:blue">Now listen.</font><font style="color: green"> I vary the sentence length, and I create music.</font><font style="color: blue"> Music.</font><font class="text-third"> The writing sings.</font><font style="color: green"> It has a pleasant rhythm, a lilt, a harmony.</font><font class="text-third"> I use short sentences.</font><font style="color: blue"> And I use sentences of medium length.</font><font style="color:violet"> And sometimes when I am certain the reader is rested, I will engage him with a sentence of considerable length, a sentence that burns with energy and builds with all the impetus of a crescendo, the roll of the drums, the crash of the cymbals — sounds that say listen to this, it is important.</font></p>
-						<p><font style="color: green">So write a combination of short, medium, and long sentences. Create a sound that pleases the reader’s ear.</font><font class="text-third"> Don’t just write words.</font><font style="color: blue"> Write music.</font> </p>
+						<p style="color:#C02400">This sentence has five words. Here are five more words. Five-word sentences are fine. But several together become monotonous. Listen to what is happening. The writing is getting boring. The sound of drones. It’s like a stuck record. The ear demands some variety. </p>
+						<p><font style="color:blue">Now listen.</font><font style="color:#0EC712"> I vary the sentence length, and I create music.</font><font style="color: blue"> Music.</font><font style="color:#C02400"> The writing sings.</font><font style="color: #0EC712"> It has a pleasant rhythm, a lilt, a harmony.</font><font style="color:#C02400"> I use short sentences.</font><font style="color: blue"> And I use sentences of medium length.</font><font style="color:#981AF8"> And sometimes when I am certain the reader is rested, I will engage him with a sentence of considerable length, a sentence that burns with energy and builds with all the impetus of a crescendo, the roll of the drums, the crash of the cymbals — sounds that say listen to this, it is important.</font></p>
+						<p><font style="color: #0EC712">So write a combination of short, medium, and long sentences. Create a sound that pleases the reader’s ear.</font><font  style="color:#C02400"> Don’t just write words.</font><font style="color: blue"> Write music.</font> </p>
 						<p style="text-align: right;">Gary Provost, quoted in Clark, R.P., (2008), page 31</p>
 				</div>
               </div>
@@ -84,7 +84,7 @@
                     <p class="pl-3">Instead of: This email <strong>is a response</strong> to the client’s original question.<br>Write: This email <strong>responds</strong> to the client’s question.</p>
                     <p class="pl-3">Instead of: This proposal <strong>has</strong> many flaws.<br>Write: This proposal <strong>contains</strong> many flaws</p>
                     <p class="pl-3">Instead of: I will <strong>look into</strong> how Krispy Kreme failed to enter the Canadian market.<br>Write: I will <strong>explore</strong> how Krispy Kreme failed to enter the Canadian market.</p>
-                    <div class="rounded accent-4 text-dark p-3 m-3">
+                    <div class="accent-4 text-dark p-3 m-3">
                     	<p>You may find the following resources useful:<ul>
                     		<li><a href="https://www.freshu.io/elizabeth-robinson/how-to-replace-helping-verbs" target="_blank">How to Replace Helping Verbs</a></li>
                     		<li><a href="http://www.owlnet.rice.edu/~cainproj/writingtips/preciseverbs.html" target="_blank">Writing Tips: Choose active, precise verbs</a></li>
@@ -100,7 +100,7 @@
                     	<li>a fashionable / stylish / elegant outfit</li>
                     	<li>a cozy / comfortable / attractive room</li>
                     </ul></p>
-                    <div class="rounded accent-4 text-dark p-3 m-3">
+                    <div class="accent-4 text-dark p-3 m-3">
                     	<p>You may find the following resources useful:<ul>
                     		<li><a href="https://smartblogger.com/weak-writing/" target="_blank">297 Flabby Words and Phrases that Rob Your Writing of All Its Power</a></li>
                     		<li><a href="https://prowritingaid.com/art/379/Are-Your-Adjectives-Powerful.aspx" target="_blank">Are Your Adjectives Powerful?</a></li>
