--- a/module_07/19_analysis_of_persuasive_text.html
+++ b/module_07/19_analysis_of_persuasive_text.html
@@ -17,7 +17,7 @@
 <body>
   <div class="container-fluid">
     <!-- Header Area -->
-    <header id="thin-1">
+    <header>
       <div class="row">
         <div class="col-sm-12 prime-bg header z-depth-1-half">
           <div class="headerMod"></div>
