--- a/module_07/09_pathos_engaging_emotions.html
+++ b/module_07/09_pathos_engaging_emotions.html
@@ -129,7 +129,7 @@
 				<div class="card third-bg text-white z-depth-2 p-3 mb-3">
 						<p>Notice how this writer uses description to persuade people who purchase clothing to be aware of where their clothing comes from:</p>
 						<p class="pl-4 pr-4">We believe some choices are so simple there’s only one right answer. The choice to buy ethical clothing that wasn't made in a sweatshop should be one of them. We stock everything the socially and environmentally conscious consumer is looking for. From organic underwear and socks made with wind power in Turkey, to collections of clothing made by small sewing co-ops in Bali, and stunning fair trade jewelry from women’s collectives in India.</p>
-						<p class="pr-4" style="text-align: right;"><a href="http://www.greyrockclothingco.com/" target="_blank">Grey Rock Clothing Company</a></p>
+						<p class="pr-4" style="text-align: right;"><a href="http://www.greyrockclothingco.com/" target="_blank"><font style=" color:#FFFFFF;">Grey Rock Clothing Company</font></a></p>
 				</div>
               </div>
             </div>
