add external link

--- a/module_07/10_using_pathos_effectively.html
+++ b/module_07/10_using_pathos_effectively.html
@@ -84,10 +84,10 @@
                     <p class="pl-3">Instead of: This email <strong>is a response</strong> to the client’s original question.<br>Write: This email <strong>responds</strong> to the client’s question.</p>
                     <p class="pl-3">Instead of: This proposal <strong>has</strong> many flaws.<br>Write: This proposal <strong>contains</strong> many flaws</p>
                     <p class="pl-3">Instead of: I will <strong>look into</strong> how Krispy Kreme failed to enter the Canadian market.<br>Write: I will <strong>explore</strong> how Krispy Kreme failed to enter the Canadian market.</p>
-                    <div class="accent-4 text-dark p-3 m-3">
+                    <div class="text-dark p-3 m-3" style="background-color: white;">
                     	<p>You may find the following resources useful:<ul>
-                    		<li><a href="https://www.freshu.io/elizabeth-robinson/how-to-replace-helping-verbs" target="_blank">How to Replace Helping Verbs</a></li>
-                    		<li><a href="http://www.owlnet.rice.edu/~cainproj/writingtips/preciseverbs.html" target="_blank">Writing Tips: Choose active, precise verbs</a></li>
+                    		<li><a href="https://www.freshu.io/elizabeth-robinson/how-to-replace-helping-verbs" target="_blank">How to Replace Helping Verbs <i class="far fa fa-external-link" aria-hidden="true"></i></a></li>
+                    		<li><a href="http://www.owlnet.rice.edu/~cainproj/writingtips/preciseverbs.html" target="_blank">Writing Tips: Choose active, precise verbs <i class="far fa fa-external-link" aria-hidden="true"></i></a></li>
                     	</ul></p>
                     </div>
                 </div>
@@ -100,10 +100,10 @@
                     	<li>a fashionable / stylish / elegant outfit</li>
                     	<li>a cozy / comfortable / attractive room</li>
                     </ul></p>
-                    <div class="accent-4 text-dark p-3 m-3">
+                    <div class="third-bg text-white p-3 m-3">
                     	<p>You may find the following resources useful:<ul>
-                    		<li><a href="https://smartblogger.com/weak-writing/" target="_blank">297 Flabby Words and Phrases that Rob Your Writing of All Its Power</a></li>
-                    		<li><a href="https://prowritingaid.com/art/379/Are-Your-Adjectives-Powerful.aspx" target="_blank">Are Your Adjectives Powerful?</a></li>
+                    		<li><a href="https://smartblogger.com/weak-writing/" target="_blank"><font class="text-white">297 Flabby Words and Phrases that Rob Your Writing of All Its Power <i class="far fa fa-external-link" aria-hidden="true"></i></font></a></li>
+                    		<li><a href="https://prowritingaid.com/art/379/Are-Your-Adjectives-Powerful.aspx" target="_blank"><font class="text-white">Are Your Adjectives Powerful? <i class="far fa fa-external-link" aria-hidden="true"></i></font></a></li>
                     	</ul></p>
                     </div>
                   </div>
