change summary format

--- a/module_07/22_summary.html
+++ b/module_07/22_summary.html
@@ -30,7 +30,7 @@
          <hr class="accent-3" />
 				</div>
         <div class="col-xs-12 col-sm-12 col-md-8 summary z-depth-1 animated slideInRight bg-white">
-          <div class="animated fadeIn text-bold p-3">
+          <div class="animated fadeIn text-bold pl-3 pr-3">
           <h1 class="h1-responsive text-accent-3 animated fadeIn mt-2">Week 07 Summary</h1>
           <p>Writing persuasively involves making the most of three different types of persuasive strategies:</p>
           <p><strong>Ethos:</strong> This strategy establishes the credibility of the writer by demonstrating<ul>
